--- a/app.css
+++ b/app.css
@@ -116,6 +116,10 @@ p {
     color: #fff;
 }
 
+.grid-item:nth-child(5) p {
+  background: rgba(000,000,000, 000);
+}
+
 /* Form Styles */
 .form-container {
     background: #eee;
@@ -171,4 +175,8 @@ select {
 .fine-print {
     display: block;
     font-size: 0.7em;
+}
+
+.display-none {
+  display: none;
 }
